fixed background image on mobile devices

--- a/about1.css
+++ b/about1.css
@@ -27,7 +27,10 @@ body {
 
 .big-image {
   background-image: url("./img/IMG_EC3D480B86BF-1.jpeg");
-  height: 100%;
+  top: 0;
+  left: 0;
+
+  height: 100vh;
   width: 100%;
   filter: blur(6px);
   position: fixed;
